# imperator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cog_files.py  meson.build  vcpkg.json
.github/workflows/: c-cpp.yml
cmake/: auto_targets.cmake  get_cpm.cmake  get_thirdparty.cmake  setup_ccache.cmake
data/icon/: ATTRIBUTION  attribution.txt  shroom.aseprite
data/img/: fps_faces.aseprite
data/logo/: gen_sizes.py  imperator_logo.aseprite  logo.aseprite
data/shader/: basic.glsl  fbos.glsl  lines.glsl  points.glsl  primitives.shader  textures.glsl  tris.glsl
example/: CMakeLists.txt  brighten.py  buddhabrot.cpp  debug_options.json  debug_overlay_options.json  indev.cpp  indev.hpp  indev_gui.cpp  maze.cpp  meson.build  minesweeper.cpp  polyline.hpp  powder_game.cpp  wireworld.cpp
example/data/shader/: basic_2.shader  basic_3.shader  basic_frag.shader  basic_vert.shader
example/res/font/cp437/: dmf_cursive_8x8.aseprite
example/res/font/cp437_prop/: dmf_calligraphy_11.aseprite  dmf_calligraphy_11.txt  dmf_cursive_11.aseprite  dmf_cursive_11.txt  fantasy_font_13px.aseprite
example/res/img/: button.aseprite  button.json  colored_tilemap_packed.aseprite  colored_tilemap_packed.json  dot.aseprite  fantasy_button.aseprite  fantasy_button.json  fruits.aseprite  fruits.json  minesweeper-sheet.aseprite  minesweeper-sheet.json  spiral.aseprite
example/res/img/icon/snake/: snake.aseprite
example/res/img/minesweeper/: cursor.aseprite  sheet.aseprite  sheet.json
example/res/minesweeper/: sheet.aseprite  sheet.json
example/res/minesweeper/icon/: icon.aseprite
example/res/shader/: basic.glsl
example/res/sound/: retro_loop.1bd
examples/: CMakeLists.txt  indev.cpp
include/: CMakeLists.txt
include/baphy/: baphy.hpp  baphy_gl_wrappers.hpp  baphy_imconfig.hpp
include/baphy/core/: engine.hpp  event_bus.hpp  glfw_callbacks.hpp  hermes.hpp  hermes_payloads.hpp  hermes_payloads_types.hpp  module.hpp  module_mgr.hpp  msgs.hpp  msgs_types.hpp  prio_list.hpp  type_id.hpp
include/baphy/gfx/: color.hpp  enum_types.hpp  gfx_enum_types.hpp  particle_system.hpp  spritesheet.hpp  surface.hpp
include/baphy/util/: averagers.hpp  enum_bitops.hpp  helpers.hpp  io.hpp  log.hpp  memusage.hpp  platform.hpp  rnd.hpp  sops.hpp  time.hpp  type_id.hpp
include/imp/: imp.h  imp.hpp  imp_gl_wrappers.hpp  imp_imconfig.hpp
include/imp/core/: engine.hpp  hermes.hpp  hermes.ipp  hermes_payloads.hpp  hermes_payloads_types.hpp  module_mgr.hpp  prio_list.hpp  type_id.hpp
include/imp/gfx/: color.hpp  gfx_2d.hpp
include/imp/util/: averagers.hpp  enum_bitops.hpp  helpers.hpp  io.hpp  log.hpp  map_macro.hpp  memusage.hpp  oneshot_macro.hpp  platform.hpp  rnd.hpp  sops.hpp  time.hpp
include/imperator/: imperator.h  imperator.hpp  imperator_gl_wrappers.hpp  imperator_imconfig.hpp
include/imperator/core/: color.h  engine.h  engine.hpp  event_bus.h  events.h  glfw_callbacks.h  glfw_wrap.h  hermes.hpp  hermes_payloads.hpp  hermes_payloads_types.hpp  module_mgr.h  module_mgr.hpp  prio_list.hpp  type_id.h  type_id.hpp
include/imperator/ds/: prio_list.h  trie.h
include/imperator/gfx/: color.hpp
include/imperator/gl/: buffer.h  enum_types.h  framebuffer.h  gl_texture.h  renderbuffer.h  shader.h  vecbuf.h  vertex_array.h
include/imperator/module/: application.h  audio_mgr.h  event_bus.h  input_mgr.h  module_mgr.h  timer_mgr.h  window.h
include/imperator/util/: averagers.h  averagers.hpp  enum_bitops.h  enum_bitops.hpp  helpers.hpp  io.h  io.hpp  log.h  log.hpp  memusage.hpp  platform.h  rnd.h  rnd.hpp  sops.h  sops.hpp  time.h  time.hpp
include/myco/: myco.h  myco.hpp  myco_imconfig.hpp
include/myco/core/: engine.h  engine.hpp  event_bus.h  glfw_callbacks.h  glfw_callbacks.hpp  module.h  msgs.h  msgs.hpp  prio_list.h  scheduler.hpp  scheduler.ipp
include/myco/gfx/: color.hpp  context2d.hpp  dear.hpp
include/myco/util/: averagers.h  averagers.hpp  enum_bitops.h  enum_bitops.hpp  helpers.h  helpers.hpp  io.h  io.hpp  log.h  log.hpp  memusage.hpp  platform.h  platform.hpp  rnd.h  rnd.hpp  sops.h  sops.hpp  thread_pool.hpp  time.h  time.hpp  type_id.h
scratch/: CMakeLists.txt  compare.py  compare_prio.cpp  futures.cpp  out.csv  priority.cpp  priority.hpp  priority.py  priority_ll.cpp  priority_v1.hpp  priority_v2.cpp  priority_v2.hpp  priority_v3.hpp  priority_v4.hpp  priority_v5.hpp  segmented_array.hpp  shader_parser.cpp  shader_preprocessor.cpp  testing.cpp  vec_vs_ll.cpp
scratch/prio_list/: graph_csv.py  out.csv  pl_compare.cpp  pl_v1.h  pl_v2.h  pl_v3.h  pl_v4.h  pl_v5.h  pl_v6.h  pl_v7.h
scratch/shader/: basic.shader
scratch/shaders/: basic.shader
src/: CMakeLists.txt
src/baphy/: baphy.cpp
src/baphy/core/: engine.cpp  event_bus.cpp  glfw_callbacks.cpp  hermes.cpp  prio_list.cpp
src/baphy/gfx/: color.cpp  particle_system.cpp  spritesheet.cpp  surface.cpp
src/baphy/util/: averagers.cpp  helpers.cpp  io.cpp  log.cpp  memusage.cpp  platform.cpp  rnd.cpp  sops.cpp  time.cpp
src/imp/: imp.cpp
src/imp/core/: engine.cpp  hermes.cpp  prio_list.cpp
src/imp/gfx/: color.cpp
src/imp/util/: averagers.cpp  helpers.cpp  io.cpp  log.cpp  memusage.cpp  platform.cpp  rnd.cpp  sops.cpp  time.cpp
src/imperator/: imperator.cpp
src/imperator/core/: color.cpp  engine.cpp  event_bus.cpp  glfw_callbacks.cpp  hermes.cpp  prio_list.cpp
src/imperator/ds/: prio_list.cpp  trie.cpp
src/imperator/gfx/: color.cpp
src/imperator/gl/: buffer.cpp  framebuffer.cpp  gl_texture.cpp  renderbuffer.cpp  shader.cpp  vertex_array.cpp
src/imperator/module/: application.cpp  audio_mgr.cpp  event_bus.cpp  input_mgr.cpp  module_mgr.cpp  timer_mgr.cpp  window.cpp
src/imperator/util/: averagers.cpp  helpers.cpp  io.cpp  log.cpp  memusage.cpp  platform.cpp  rnd.cpp  sops.cpp  time.cpp
src/myco/: myco.cpp
src/myco/core/: engine.cpp  event_bus.cpp  glfw_callbacks.cpp  msgs.cpp  scheduler.cpp
src/myco/gfx/: color.cpp  context2d.cpp  dear.cpp
src/myco/util/: averagers.cpp  helpers.cpp  io.cpp  log.cpp  memusage.cpp  (+4 more)
subprojects/: glbinding.wrap  glfw.wrap
(+190 files in other folders)
